# cs280_final_proj

./: .gitignore  CLAUDE.md  DAY1_KICKOFF_PROMPT.md  README.md  pyproject.toml
data/scene_brass_goblet/depth/: cond.exr  view_0.exr  view_1.exr  view_2.exr  view_3.exr  view_4.exr  (+1 more)
data/scene_brass_goblet_v2/: poses.json  verification_report.json
data/scene_glass_suzanne/: poses.json  verification_report.json
docs/memory/: productContext.md  progress.md
model/: Untitled.blend  Untitled.blend1  camera_params.json
outputs/_fake_scene/: dual_path_view0.json  poses.json
outputs/brass_smoke_test/: stats.json  stats_full.json
outputs/convention_test/: sampson_comparison.csv
outputs/dual_path/: all_scenes_summary.csv  report.md
outputs/figures_for_pre/: pre.txt
outputs/plan_b_aggregate/: all_scenes_summary.csv  morning_report.md  report.md
scripts/: _inspect_blend.py  _make_fake_scene.py  _sanity_only.py  _test_gpu_render.py  _test_material_swap.py  _test_origin_projection.py  aggregate_scenes.py  inspect_glass_zero123.py  inspect_zero123_output.py  make_figure_1.py  make_per_view_pattern.py  make_ratio_scatter.py  match_diagnostic.py  render_blender_scene.py  render_blender_scene_v2.py  render_glass_cond_only.py  run_batch.py  run_dual_path_experiment.py  run_plan_b.sh  run_single.py  split_and_visualize.py  test_blender_mask.py  test_env.py  validate_convention.py  verify_scene_data.py  write_morning_report.py  zero123_camera.py
src/: __init__.py  camera.py  epipolar.py  generation.py  io_utils.py  matching.py  pipeline.py  region_analysis.py  viz.py
(+33 files in other folders)
