[project]
name = "cv"
version = "0.1.0"
description = "Transparent object perception CV project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "diffusers==0.20.2",
    "transformers>=4.25.1,<5.0",
    "huggingface_hub==0.21.3",
    "accelerate",
    "kornia",
    "opencv-python",
    "matplotlib",
    "pillow",
    "tqdm",
    "einops",
    "numpy<2",
    "scipy",
    "requests",
    "rembg",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
